# dormyboba

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.kroki  Makefile  README.md  bot.py  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml  Docs-CI.yml  makefile.yml  workflow.yml
api/: apiv1.proto  apiv1_pb2.py  apiv1_pb2_grpc.py
config/: config.yaml
db/: data.sql  data_for_mailing.sql  drop.sql  schema.sql
docs/: Makefile
docs/builder/: builder.py
docs/builder/kroki/: docker-compose.yml
docs/business-logic/: README.md
docs/business-logic/login/: README.md  login.bpmn
docs/business-logic/mail/: README.md  mail.bpmn
docs/business-logic/queue/: queue.bpmn
docs/business-logic/register/: README.md  register.bpmn
docs/fp/: fp.md
docs/functional-requirements/: functional_requirements.md
docs/functional_requirements/: functional_requirements.md
docs/hld/: README.md  component.mmd  component.puml  system.md  system.mmd  system.puml
dormyboba/: __main__.py  bot.py  command.py  config.py  container.py  daemon_tasks.py  main.py
dormyboba/handlers/: __init__.py  common.py  defect.py  handlers.py  injection.py  invite.py  mailing.py  queue.py  token.py
dormyboba/model/: generated.py
test/: Dockerfile.pg  defect.feature  init.sql  invite.feature  mailing.feature  queue.feature
test/init/: init.sql
tests/handlers/: supercommon.py  test_common.py  test_defect.py  test_invite.py  test_mailing.py  test_queue.py
