[tool.poetry]
name = "dormyboba"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
vkbottle = "^4.3.12"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
pyyaml = "^6.0.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
gspread = "^6.0.0"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.59.0"
sqlacodegen = "3.0.0rc3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
do-main = "dormyboba.main:main"
