[tool.poetry]
name = "dormyboba"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
vkbottle = "^4.3.12"
pyyaml = "^6.0.1"
dormyboba-api = {git = "https://github.com/aaletov/dormyboba-api.git", rev = "6-fix-3-mailing-and-queue-events-not-in-spec", subdirectory = "api/generated/python"}
grpcio = "^1.60.1"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.59.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
do-main = "dormyboba.main:main"
