[tool.poetry]
name = "dormyboba"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
vkbottle = "^4.3.12"
pyyaml = "^6.0.1"
grpcio = "^1.60.1"
dormyboba-api = {git = "https://github.com/aaletov/dormyboba-api.git", rev = "main", subdirectory = "api/generated/python"}
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.59.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
do-main = "dormyboba.main:main"
